[package]
name = "kpathsea"
version = "0.2.3"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>", "Emily Eisenberg <xymostech@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/dginev/rust-kpathsea"
homepage = "https://github.com/dginev/rust-kpathsea"
documentation = "https://docs.rs/crate/kpathsea"
description = """
Rust interface to the kpathsea TeX file management library.
"""

[lib]
name = "kpathsea"

[dependencies]
kpathsea_sys = {version="0.1.2", path="../kpathsea_sys"}
which = "6.0.0"

[package.metadata.docs.rs]
rustc-args = ["--cfg",  "kpathsea_docs_rs"]
rustdoc-args = ["--cfg", "kpathsea_docs_rs"]
