[package]
name = "kpathsea_sys"
version = "0.1.0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2018"
links = "kpathsea"
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/dginev/rust-kpathsea"
homepage = "https://github.com/dginev/rust-kpathsea"
documentation = "https://docs.rs/rust-kpathsea"
description = """
Bindings to libkpathsea for efficient file management in the TeX ecosystem
"""
categories = ["external-ffi-bindings"]

[lib]
name = "kpathsea_sys"

[build-dependencies]
pkg-config = "0.3.2"
